--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -53,3 +53,11 @@ typeMismatch.java.lang.Long=Property {0} must be a valid number
 typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+
+purpose.create.name=Name
+purpose.create.description=Description
+purpose.create.submit=Create purpose
+
+purpose.message.success=Purpose saved
+purpose.message.error=There has been an error while saving your purpose
+purpose.message.notFound=This is not the purpose you are looking for
