--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -61,3 +61,7 @@ purpose.create.submit=Create purpose
 purpose.message.success=Purpose saved
 purpose.message.error=There has been an error while saving your purpose
 purpose.message.notFound=This is not the purpose you are looking for
+
+effort.create.date=Date
+effort.create.description=Description
+effort.create.submit=Register effort
