Effort creation and tweaks to improve navigation

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -65,3 +65,7 @@ purpose.message.notFound=This is not the purpose you are looking for
 effort.create.date=Date
 effort.create.description=Description
 effort.create.submit=Register effort
+
+effort.message.success=Effort registered
+effort.message.error=There has been an error while registering your effort
+effort.message.notFound=This is not the effort you are looking for
