--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -69,3 +69,6 @@ effort.create.submit=Register effort
 effort.message.success=Effort registered
 effort.message.error=There has been an error while registering your effort
 effort.message.notFound=This is not the effort you are looking for
+
+comment.create.body=Comentario
+comment.create.submit=Create comment
