Messages refactorized to fit i18n

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -54,9 +54,17 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
+purpose.index.title=My purposes
+purpose.index.create=New Purpose
+
+purpose.create.title=Create purpose
 purpose.create.name=Name
 purpose.create.description=Description
 purpose.create.submit=Create purpose
+
+purpose.show.title=Show purpose
+purpose.show.efforts=Efforts
+purpose.show.newEffort=Register new effort
 
 purpose.message.success=Purpose saved
 purpose.message.error=There has been an error while saving your purpose
@@ -65,6 +73,9 @@ purpose.message.notFound=This is not the purpose you are looking for
 effort.create.date=Date
 effort.create.description=Description
 effort.create.submit=Register effort
+
+effort.show.title=Show effort
+effort.show.newComment=Write a comment
 
 effort.message.success=Effort registered
 effort.message.error=There has been an error while registering your effort
