First approach to css styles

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -54,15 +54,15 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
-purpose.index.title=My purposes
+purpose.index.title=my purposes
 purpose.index.create=New Purpose
 
-purpose.create.title=Create purpose
+purpose.create.title=create purpose
 purpose.create.name=Name
 purpose.create.description=Description
 purpose.create.submit=Create purpose
 
-purpose.show.title=Show purpose
+purpose.show.title=show purpose
 purpose.show.efforts=Efforts
 purpose.show.newEffort=Register new effort
 
@@ -74,12 +74,14 @@ effort.create.date=Date
 effort.create.description=Description
 effort.create.submit=Register effort
 
-effort.show.title=Show effort
+effort.show.title=show effort
 effort.show.newComment=Write a comment
 
 effort.message.success=Effort registered
 effort.message.error=There has been an error while registering your effort
 effort.message.notFound=This is not the effort you are looking for
 
-comment.create.body=Comentario
+comment.create.body=Comment
 comment.create.submit=Create comment
+
+dashboard.index.title=dashboard
